<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tenant Control</string>
    <string name="inline_preferences">Main settings</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_about">About</string>
    <string name="title_data_url_preference">Data Query URL</string>
    <string name="data_url_preference_on">URL for data query</string>
    <string name="menu_main_list">Home</string>
    <string name="pref_auto_check">Tenant state check</string>
    <string name="pref_full_auto_check">Time scheduling for tenant state check</string>

    <string name="channel_name">Tenant Control</string>
    <string name="channel_description">Tenant Control notifications</string>
    <string name="pref_schedule_on_full">Watch Tenants in background</string>
    <string name="pref_schedule_on_short">Watch tenants</string>
    <string name="all_ok">All tenants are operational</string>
    <string name="all_not_ok">Tenant %s not operational</string>
    <string name="all_error">Error processing tenants</string>
    <string name="str_notif">Notification</string>
    <string name="str_oper">Operational</string>
    <string name="str_not_oper">Not operational</string>
    <string name="str_schema">Schema</string>
    <string name="str_user">Users</string>

</resources>
